# pyGDST

./: README.md  pyproject.toml
src/pygdst/: __init__.py  convert.py  example.py  gdst.py  paras.py
tests/: run.py  stats.py
